Updated website with new pages and styles

--- a/trend1.html
+++ b/trend1.html
@@ -3,19 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trend 1</title>
+    <title>October 2024 Picks</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
-        <!-- Same nav as main page -->
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li class="dropdown">
+                <a href="#">Picks</a>
+                <ul class="dropdown-content">
+                    <li><a href="trend1.html">Oct24</a></li>
+                    <li><a href="trend2.html">Nov24</a></li>
+                </ul>
+            </li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </nav>
     <main>
-        <h1>Trend 1</h1>
-        <p>Detailed information about Trend 1.</p>
+        <h1>October 2024 Picks</h1>
+        <p>A Look into what I like for October 2024</p>
+        <br>
+        <div class="trends">
+            <div class="trend-item">
+                <h2>Pick 1: Oversized Coat By Zara</h2>
+                <img src="images/oct2024/06469739401-a3.webp" alt="Zara Oversized" class="trend-image">
+                <img src="images/oct2024/06469739401-a5.webp" alt="Zara Oversized" class="trend-image">
+                <p>Embrace the cozy elegance of this <strong>Oversized Fit Coat</strong> from Zara. Crafted from a luxurious wool blend fabric, this coat features a notched lapel collar, long sleeves with buttoned cuffs, flap pockets at the hip, an inside pocket, and a central back vent. I can see this wore with either trousers or jeans, and a nice shirt making it perfect for both casual and formal occasions. I can see this being worn to the office in the autumn/winter, but also for food or drinks in town with friends.</p>
+                <p><strong>Price</strong>: <strong>£169.00</strong></p>
+
+                <p><a href="https://www.zara.com/uk/en/oversized-fit-coat-p06469739.html?v1=402558610&v2=2432200" target="_blank">Explore the Zara Oversized Fit Coat here</a></p>
+            </div>
+            <div class="trend-item">
+                <h2>Pick 2: V2 Hoddie By Seventh Stores</h2>
+                <img src="images/oct2024/Seventh_08_09_20234087_1.webp" alt="cactus-v2-hoodie" class="trend-image">
+                <p>Embrace the cozy elegance of this <strong>Oversized Fit Coat</strong> from Zara. Crafted from a luxurious wool blend fabric, this coat features a notched lapel collar, long sleeves with buttoned cuffs, flap pockets at the hip, an inside pocket, and a central back vent. The front button fastening adds a classic touch, making it perfect for both casual and formal occasions. I can see this being worn to the office in the autumn/winter, but also for food or drinks in town with friends.</p>
+                <p><strong>Price</strong>: <strong>£169.00</strong></p>
+
+                <p><a href="https://seventhstores.com/products/cactus-v2-hoodie" target="_blank">Explore the Seventh Stores V2 Hoodie here</a></p>
+            </div>
+            <div class="trend-item">
+                <h2>Pick 3: Knitted Crewneck By About Blank</h2>
+                <img src="images/oct2024/ABknit.png" alt="Moderate Knitted Crewneck" class="trend-image">
+                <img src="images/oct2024/ABknitfornt.png" alt="Knitted Crewneck" class="trend-image">
+                <p>The <strong>Moderate Knitted Crewneck</strong> from About Blank is a standout piece despite its £200 price tag. The quality of this jumper justifies its cost, as it's crafted from high-quality materials that provide both comfort and style. I can easily see it being worn with a shirt underneath and paired with nice black trousers for a polished look. About Blank is a brand I really like, known for their stylish, yet understated pieces. The attention to detail and the quality of their products explain the higher price point, making it a worthy addition to any wardrobe.</p>
+                <p><strong>Price</strong>: <strong>£200.00</strong></p>
+                <p><a href="https://about---blank.com/collections/aw24-drop-one/products/moderate-knitted-crewneck-grey-ecru" target="_blank">Explore the Moderate Knitted Crewneck here</a></p>
+            </div>
+
+        </div>
     </main>
     <footer>
-        <!-- Same footer as main page -->
+        <li><a href="https://www.instagram.com/yourusername" target="_blank"><img src="images/insta.jpg" alt="Instagram" class="social-icon"></a></li>
     </footer>
 </body>
 </html>
+
+
+
