--- a/trend2.html
+++ b/trend2.html
@@ -8,11 +8,24 @@
 </head>
 <body>
     <nav>
-        <!-- Same nav as main page -->
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li class="dropdown">
+                    <a href="#">Picks</a>
+                    <ul class="dropdown-content">
+                        <li><a href="trend1.html">Oct24</a></li>
+                        <li><a href="trend2.html">Nov24</a></li>
+                    </ul>
+                </li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </nav>
     <main>
-        <h1>Trend 2</h1>
-        <p>Detailed information about Trend 2.</p>
+        <h1>November 2024 Picks</h1>
+        <p>A Look into what I like for November 2024</p>
     </main>
     <footer>
         <!-- Same footer as main page -->
