--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Cao Fashion</title>
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js"></script>
 
@@ -11,27 +11,33 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Collections</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li class="dropdown">
+                <a href="#">Picks</a>
+                <ul class="dropdown-content">
+                    <li><a href="trend1.html">Oct24</a></li>
+                    <li><a href="trend2.html">Nov24</a></li>
+                </ul>
+            </li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <main>
         <section class="hero">
             <h1>Cao</h1>
-            <p>Your hub for all things fashion</p>
+            <p>Projecting style by me for me</p>
         </section>
         <section class="trends">
-            <h2>Current Trends</h2>
+            <h2>Current Picks</h2>
             <div class="trend-item">
                 <a href="trend1.html">
-                    <img src="images/trend1.jpg" alt="Trend 1" class="trend-image">
-                    <h3>Trend 1</h3>
-                    <p>A brief description of Trend 1.</p>
+                    <img src="images/oct2024/06469739401-a3.webp" alt="Trend 1" class="background-image">
+                    <h3>October 2024 Pick</h3>
+                    <p>My Picks for October 2024.</p>
                 </a>
             </div>
+
             <div class="trend-item">
                 <a href="trend2.html">
                     <img src="images/trend2.jpg" alt="Trend 2" class="trend-image">
@@ -50,9 +56,6 @@
         <!-- Add other social media links here -->
     </ul>
 </footer>
-
-
-
 </html>
 
 
